# scXpand

./: .codecov.yaml  .coveragerc  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUDA_SOLUTION_PRESERVATION.md  LICENSE  Makefile  README.md  SCOVERSE_COMPLIANCE_CHECKLIST.md  biome.jsonc  coverage.xml  install.bat  install.sh  install_torch.py  pyproject.toml  pyproject.toml.cuda_backup  pytest.ini  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  changelog.yml  ci.yml  docs.yml  lint.yml  release.yml  test.yml
docs/: __init__.py  api_reference.rst  build_docs.py  cli_reference.rst  conf.py  contributing.rst  data_format.rst  data_pipeline.rst  data_splitting.rst  evaluation_metrics.rst  gene_specific_normalization_inference.md  hyperparameter_optimization.rst  index.rst  installation.rst  model_architectures.rst  model_inference.rst  model_sharing.md  model_training.rst  output_format.rst  prepare_notebooks.py  references.bib  requirements.txt  tutorials.rst  usage_examples.rst  user_guide.rst
docs/_static/: custom.css
docs/api/: autoencoders.rst  data_util.rst  hyperopt.rst  index.rst  scxpand.autoencoders.ae_losses.rst  scxpand.autoencoders.ae_model_output.rst  scxpand.autoencoders.ae_models.rst  scxpand.autoencoders.ae_modules.rst  scxpand.autoencoders.ae_params.rst  scxpand.autoencoders.ae_trainer.rst  scxpand.autoencoders.rst  scxpand.autoencoders.run_ae_train.rst  scxpand.core.evaluation.rst  scxpand.core.inference.rst  scxpand.core.inference_results.rst  scxpand.core.model_types.rst  scxpand.core.prediction.rst  scxpand.core.rst  scxpand.data_util.constants.rst  scxpand.data_util.data_format.rst  scxpand.data_util.data_splitter.rst  scxpand.data_util.dataloaders.rst  scxpand.data_util.dataset.rst  scxpand.data_util.prepare_data_for_train.rst  scxpand.data_util.rst  scxpand.data_util.statistics.rst  scxpand.data_util.transforms.rst  scxpand.hyperopt.hyperopt_optimizer.rst  scxpand.hyperopt.hyperopt_utils.rst  scxpand.hyperopt.param_grids.rst  scxpand.hyperopt.rst  scxpand.lightgbm.lightgbm_params.rst  scxpand.lightgbm.rst  scxpand.lightgbm.run_lightgbm_.rst  scxpand.linear.linear_params.rst  scxpand.linear.linear_trainer.rst  scxpand.linear.model_manager.rst  scxpand.linear.rst  scxpand.linear.sklearn_utils.rst  scxpand.main.rst  (+27 more)
docs/notebooks/: embeddings.ipynb  inference.ipynb  scxpand_tutorial.ipynb
notebooks/: inference.ipynb  scxpand_tutorial.ipynb
scripts/: CLEANUP_PYPI.md  PUBLISHING.md  build_packages.sh  cleanup_pypi.py  cleanup_pypi.sh  constants.py  create_cuda_pyproject.py  install_torch_for_dev.py  release.sh  release_dual.sh
scxpand/: __init__.py  main.py
scxpand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scxpand/autoencoders/: ae_losses.py  ae_model_output.py  ae_models.py  ae_modules.py  ae_params.py  ae_trainer.py  run_ae_train.py
scxpand/core/: __init__.py  evaluation.py  inference.py  inference_results.py  model_types.py  prediction.py
scxpand/data_util/: __init__.py  data_format.py  data_splitter.py  dataloaders.py  dataset.py  prepare_data_for_train.py  statistics.py  transforms.py
scxpand/hyperopt/: hyperopt_optimizer.py  hyperopt_utils.py  param_grids.py
scxpand/lightgbm/: run_lightgbm_.py
scxpand/linear/: linear_params.py  linear_trainer.py  model_manager.py  sklearn_utils.py
scxpand/mlp/: mlp_losses.py  mlp_model.py  mlp_params.py  mlp_trainer.py  run_mlp_train.py
scxpand/pretrained/: __init__.py  download_manager.py  inference_api.py  model_registry.py
scxpand/util/: classes.py  general_util.py  inference_utils.py  io.py  logger.py  metrics.py  model_constants.py  model_loading.py  model_registry.py  model_type.py  plots.py  train_logger.py  train_util.py  training_utils.py
src/scxpand/: __init__.py  main.py
tests/: ORGANIZATION_SUMMARY.md  README.md  conftest.py  conftest_cli.py  integration_test.py  run_tests.py  test_cli_demo.py  test_main.py  test_main_cli.py  test_main_cli_integration.py  test_main_inference.py  test_main_predict.py  test_pretrained_inference.py  test_pretrained_model_functions.py  test_run_inference_edge_cases.py  test_run_inference_error_handling.py  test_run_inference_integration.py  test_utils.py
tests/autoencoders/: test_activation_functions.py  test_ae_losses.py  test_ae_model_output.py  test_ae_trainer.py  test_ae_trainer_early_stopping.py  test_decoder.py  test_decoder_transforms.py  test_negative_binomial_parameterization.py
tests/core/: __init__.py  test_evaluation.py  test_prediction.py
tests/data_util/: test_balanced_batch_sampler.py  test_data_format.py  test_data_splitter.py  test_data_splitter_error_handling.py  test_data_util.py  test_dataset.py  test_dataset_dataformat_integration.py  test_dataset_gene_comparison.py  test_dataset_vs_transforms_consistency.py  test_gene_mismatch_normalization.py  test_mlp_inference_gene_reordering.py  test_multiprocessing.py  test_multiprocessing_dataloaders.py  test_normalization.py  test_normalization_consistency.py  test_normalization_integration.py  test_prepare_data_for_train.py  test_preprocess_expression_data.py  test_preprocessing.py  test_transforms.py
tests/fixtures/: conftest.py  conftest_cli.py
tests/hyperopt/: test_checkpoint_core.py  test_checkpoint_resuming.py  test_error_handling.py  test_hyperopt.py  test_linear_hyperopt.py  test_lr_scheduler_configs.py  test_optimize.py  test_optimize_integration.py
tests/lightgbm/: test_inference_preprocessing_compatibility.py  test_lightgbm_params.py  test_zscore_normalization_flag.py
tests/linear/: __init__.py  test_data_loader.py  test_linear_trainer.py  test_model_manager.py  test_trainer.py
tests/mlp/: __init__.py  test_mlp_model.py
tests/util/: test_gene_mismatch_handling_all_models.py  test_gene_specific_normalization.py  test_inference_parameter_propagation.py  test_inference_utils.py  test_inference_utils_enhanced.py  test_io.py  test_io_multiprocessing.py  (+5 more)
(+95 files in other folders)
